@@ -1,3 +1,10 @@
+	* Expectations of death do not follow move-constructed and
+	  copy-constructed deathwatched<T> objects.
+
+v3   2015-04-02
+
+	* Fixed compiler dependent reference binding SNAFU
+
 v2   2015-04-02
 
 	* Improved compilation time performance. 20% drop in compilation time
